--- a/AnsibleWorkShop/project/vars/podman_play-samba.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-samba.yml
@@ -1,12 +1,16 @@
 # code: language=ansible
 ---
+vars_podman_uri:
+  host: http://d # http://d/ ← (default), https://docs.podman.io/en/latest/markdown/podman-system-service.1.html
+  api_version: v4.0.0 # v4.0.0 ← (default)
+  unix_socket: /run/user/1000/podman/podman.sock # socket file path for podman, e.g. /run/user/1000/podman/podman.sock
+
 vars_podman_play:
-  state: present # absent / present
-  query_params:
-    delete:
+  state: absent # absent / present
+  kube_file: /KubeWorkShop/Samba/aio-samba.yaml
+  absent:
+    query_params:
       force: "true"
-  request_body:
-    kube_file: /KubeWorkShop/Samba/aio-samba.yaml
 
 vars_podman_generate_systemd:
   path_params:
