--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-provision/defaults/main.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-provision/defaults/main.yml
@@ -9,9 +9,10 @@ role_name: ansible-podman-rootless-provision
 defaults_package:
   podman:
     state: present
+    include_cockpit_podman: false
     dnf:
       enablerepo: # updates-testing
-      update_cache: # true
+      update_cache:
 
 # https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_filters.html#combining-hashes-dictionaries
 package: "{{ defaults_package | ansible.builtin.combine(vars_package, recursive=True) }}"
