--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanPackage.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-provision/tasks/Set-PodmanPackage.yml
@@ -18,7 +18,8 @@
     state: "{{ package.podman.state }}"
     # https://fedoraproject.org/wiki/QA:Updates_Testing#Enabling_the_repositories_temporarily
     enablerepo: "{{ package.podman.dnf.enablerepo | default(omit) }}"
-    update_cache: "{{ omit if package.podman.dnf.update_cache is none }}"
+    update_cache: "{{ omit if package.podman.dnf.update_cache is undefined
+                              or package.podman.dnf.update_cache is none  }}"
   become: true
   when:
     - ansible_pkg_mgr == "dnf"
