--- a/AnsibleWorkShop/project/vars/podman_play-samba.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-samba.yml
@@ -15,10 +15,11 @@ vars_podman_play:
       force: "true"
 
 vars_podman_generate_systemd:
-  path_params:
-    name: samba
-  query_params:
-    useName: true
+  get:
+    path_params:
+      name: samba
+    query_params:
+      useName: true
 
 vars_service:
   podman_pod:
