--- a/AnsibleWorkShop/inventory/AIO.yml
+++ b/AnsibleWorkShop/inventory/AIO.yml
@@ -1,12 +1,17 @@
 ---
-
-k3s_cluster:
+sololab:
   vars:
     # https://9to5answer.com/can-i-bypass-host-key-checking-in-ansible
     # https://github.com/ansible/ansible/issues/49254
     ansible_host_key_checking: False
     ansible_ssh_host_key_checking: False
   hosts:
+    vyos:
+      ansible_host: 192.168.255.1
+      ansible_connection: ansible.netcommon.network_cli
+      ansible_network_os: vyos.vyos.vyos
+      ansible_user: vagrant
+      ansible_password: vagrant
     kube-0:
       ansible_user: vagrant
       ansible_host: localhost
