--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanGenerateRequest.yml
@@ -8,7 +8,7 @@
   block:
     - name: Clean up the podman_generate_systemd query params dict
       ansible.builtin.set_fact:
-        podman_generate_systemd_get_query_params: "{{ {item.key: item.value} }}"
+        podman_generate_systemd_generate_query_params: "{{ {item.key: item.value} }}"
       loop: "{{ podman_generate_systemd.get.query_params | dict2items }}"
       when:
         - podman_generate_systemd.get.query_params is defined
@@ -16,16 +16,16 @@
 
     - name: Convert query_params from dict to string for podman_generate_systemd
       ansible.builtin.set_fact:
-        podman_generate_systemd_get_query_params_string: "?{{ podman_generate_systemd_get_query_params.keys() | 
-                                                          ansible.builtin.zip(podman_generate_systemd_get_query_params.values()) |
+        podman_generate_systemd_generate_query_params_string: "?{{ podman_generate_systemd_generate_query_params.keys() | 
+                                                          ansible.builtin.zip(podman_generate_systemd_generate_query_params.values()) |
                                                           map('join', '=') |
                                                           join('&') }}"
       when: 
-        - podman_generate_systemd_get_query_params is defined
+        - podman_generate_systemd_generate_query_params is defined
 
     - name: Get pod systemd unit content
       ansible.builtin.uri:
-        url: "{{ podman_uri.scheme_authority }}/{{ podman_uri.api_version }}/libpod/generate/{{ pod_id | default(podman_generate_systemd.path_params.name) }}/systemd{{ podman_generate_systemd_get_query_params_string | default('')}}"
+        url: "{{ podman_uri.scheme_authority }}/{{ podman_uri.api_version }}/libpod/generate/{{ pod_id | default(podman_generate_systemd.generate.path_params.name) }}/systemd{{ podman_generate_systemd_generate_query_params_string | default('')}}"
         unix_socket: "{{ podman_uri.unix_socket | default(omit) }}"
         method: GET
         status_code: 
@@ -159,13 +159,13 @@
     # https://stackoverflow.com/questions/38847824/ansible-how-to-get-service-status-by-ansible/69827034#69827034
     - name: Detect pod systemd service state
       ansible.builtin.systemd:
-        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.path_params.name }}.service"
+        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
         scope: user
       register: pod_service_status
 
     - name: Disable systemd service
       ansible.builtin.systemd:
-        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.path_params.name }}.service"
+        name: "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
         state: stopped
         enabled: false
         scope: user
@@ -176,8 +176,8 @@
       ansible.builtin.find:
         paths: "{{ podman_generate_systemd.dest }}"
         patterns: 
-          - "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.path_params.name }}.service"
-          - "{{ podman_generate_systemd.get.query_params.containerPrefix | default('container')}}-{{ podman_generate_systemd.path_params.name }}*.service"
+          - "{{ podman_generate_systemd.get.query_params.podPrefix | default('pod')}}-{{ podman_generate_systemd.generate.path_params.name }}.service"
+          - "{{ podman_generate_systemd.get.query_params.containerPrefix | default('container')}}-{{ podman_generate_systemd.generate.path_params.name }}*.service"
       register: service_unit_to_delete
 
     - name: Delete pod related unit file
