--- a/KubeWorkShop/Traefik/aio-traefik.yaml
+++ b/KubeWorkShop/Traefik/aio-traefik.yaml
@@ -60,6 +60,7 @@ spec:
   containers:
     - name: traefik
       image: docker.io/library/traefik:latest
+      imagePullPolicy: IfNotPresent
       resources:
         limits:
           memory: "256Mi"
